--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^6.8.0",
-    "recharts": "^2.5.0",
-    "lucide-react": "^0.263.1",
-    "react-speech-kit": "^3.0.1"
+    "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
+    "recharts": "^2.5.0"
   },
   "browserslist": {
     "production": [
